# mod-neural-amp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  model-from-index.cpp  res2c.py
mod-neural-amp.lv2/: manifest.ttl  mod-neural-amp.ttl
models/: AMP Blues Deluxe Clean1.json  AMP Blues Deluxe Clean2.json  AMP Blues Deluxe Clean3.json  AMP Blues Deluxe Crunchy.json  AMP Blues Deluxe Dirty.json  AMP Blues Deluxe Gainy.json  AMP Marsh JVM Clean1.json  AMP Marsh JVM Clean2.json  AMP Marsh JVM Crunch.json  AMP Marsh JVM OD1.json  AMP Marsh JVM OD2.json  AMP Orange Clean.json  AMP Orange Crunchy1.json  AMP Orange Crunchy2.json  AMP Orange Dirty.json  AMP Orange Nasty.json  AMP Twin Custom1.json  AMP Twin Custom2.json  AMP Twin Vintage1.json  AMP Twin Vintage2.json
